--- a/GomokuBlazor/wwwroot/index.html
+++ b/GomokuBlazor/wwwroot/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>GomokuBlazor</title>
+    <title>五目並べ (ASP.NET Core Blazor)</title>
     <base href="/gomoku-blazor/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
